# HandsomeMod

./: .gitignore
include/: target.mk
package/boot/uboot-sunxi/: Makefile  uEnv-cbox.txt  uEnv-h5.txt
package/boot/uboot-sunxi/patches/: 001-add-sun8i-v3s-lcd-support.patch  002-add-nand-support.patch  003-add-support-for-suniv.patch  250-sun8i-h3-zeropi-add-device-tree.patch  265-fix-mkimage-patch.patch  268-fix-sunxi-cons.patch  300-add-sunxi-v3s-device-tree.patch  301-Enable-SPL_SPI_SUNXI-for-V3S-and-add-SPL_NANDSPI_SUNXI.patch
package/boot/uboot-sunxi/src/configs/: LicheePi_Zero_SPINAND_defconfig  LicheePi_Zero_defconfig  cbox_neo_defconfig  (+4 more)
package/kernel/linux/modules/: display.mk  iio.mk  input.mk  wireless.mk
package/prince/esp32-control/: Makefile
package/prince/esp32-control/src/: Makefile  ctrl_config.h  esp32_tool.c  rpi_init.sh  stress.c
package/prince/framebuffer/: Makefile
package/prince/framebuffer/src/: Makefile  fb-test.c
package/prince/kmod-esp32/: Makefile
package/prince/kmod-esp32/src/: Makefile  adapter.h
package/prince/kmod-esp32_ng/: Makefile
package/prince/kmod-esp32_ng/src/: Makefile
package/prince/linuxcar/: Makefile
package/prince/lvgl_ili9341/: Makefile
package/prince/mp4play/: Makefile
package/prince/stepmoto/: Makefile
package/prince/stepmoto/src/: CMakeLists.txt  README.md  led.cpp  led.h  main.cpp  smart_moto
tools/mkimage/patches/: 030-allow-to-use-different-magic.patch  050-Add-compatibility-with-non-Linux-hosts.patch  100-increase-tmpfile-name-length-limit.patch  200-fix-ssl-pthead.patch
(+6 files in other folders)
